Move auth body validation to Swagger/Connexion
